log/build_2023-08-30_12-21-28/px4_ros_com/stdout_stderr.log
-- Found ament_cmake: 0.9.11 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Found builtin_interfaces: 1.0.0 (/opt/ros/foxy/share/builtin_interfaces/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.3.0 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found eigen3_cmake_module: 0.1.1 (/opt/ros/foxy/share/eigen3_cmake_module/cmake)
-- Found geometry_msgs: 2.0.5 (/opt/ros/foxy/share/geometry_msgs/cmake)
-- Found px4_msgs: 2.0.1 (/home/khuluq/hayago_ws/install/px4_msgs/share/px4_msgs/cmake)
-- Found rclcpp: 2.4.2 (/opt/ros/foxy/share/rclcpp/cmake)
-- Found rmw_implementation_cmake: 1.0.4 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 2.0.5 (/opt/ros/foxy/share/sensor_msgs/cmake)
-- Found ament_lint_auto: 0.9.8 (/opt/ros/foxy/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/khuluq/hayago_ws/src/px4_ros_com/include;$<BUILD_INTERFACE:/home/khuluq/hayago_ws/src/px4_ros_com/include/px4_ros_com>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the style conventions in PEP 257
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/khuluq/hayago_ws/build/px4_ros_com
[ 20%] Built target frame_transforms
[35m[1mScanning dependencies of target debug_vect_advertiser[0m
[ 30%] [32mBuilding CXX object CMakeFiles/debug_vect_advertiser.dir/src/examples/advertisers/debug_vect_advertiser.cpp.o[0m
[ 40%] [32m[1mLinking CXX executable debug_vect_advertiser[0m
[ 40%] Built target debug_vect_advertiser
[35m[1mScanning dependencies of target sensor_combined_listener[0m
[ 50%] [32mBuilding CXX object CMakeFiles/sensor_combined_listener.dir/src/examples/listeners/sensor_combined_listener.cpp.o[0m
[ 60%] [32m[1mLinking CXX executable sensor_combined_listener[0m
[ 60%] Built target sensor_combined_listener
[35m[1mScanning dependencies of target vehicle_gps_position_listener[0m
[ 70%] [32mBuilding CXX object CMakeFiles/vehicle_gps_position_listener.dir/src/examples/listeners/vehicle_gps_position_listener.cpp.o[0m
/home/khuluq/hayago_ws/src/px4_ros_com/src/examples/listeners/vehicle_gps_position_listener.cpp: In lambda function:
/home/khuluq/hayago_ws/src/px4_ros_com/src/examples/listeners/vehicle_gps_position_listener.cpp:60:33: error: ‘struct px4_msgs::msg::SensorGps_<std::allocator<void> >’ has no member named ‘latitude_deg’
   60 |    std::cout << "lat: " << msg->latitude_deg  << std::endl;
      |                                 ^~~~~~~~~~~~
/home/khuluq/hayago_ws/src/px4_ros_com/src/examples/listeners/vehicle_gps_position_listener.cpp:61:33: error: ‘struct px4_msgs::msg::SensorGps_<std::allocator<void> >’ has no member named ‘longitude_deg’
   61 |    std::cout << "lon: " << msg->longitude_deg << std::endl;
      |                                 ^~~~~~~~~~~~~
/home/khuluq/hayago_ws/src/px4_ros_com/src/examples/listeners/vehicle_gps_position_listener.cpp:62:33: error: ‘struct px4_msgs::msg::SensorGps_<std::allocator<void> >’ has no member named ‘altitude_msl_m’
   62 |    std::cout << "alt: " << msg->altitude_msl_m  << std::endl;
      |                                 ^~~~~~~~~~~~~~
/home/khuluq/hayago_ws/src/px4_ros_com/src/examples/listeners/vehicle_gps_position_listener.cpp:63:43: error: ‘struct px4_msgs::msg::SensorGps_<std::allocator<void> >’ has no member named ‘altitude_ellipsoid_m’; did you mean ‘alt_ellipsoid’?
   63 |    std::cout << "alt_ellipsoid: " << msg->altitude_ellipsoid_m << std::endl;
      |                                           ^~~~~~~~~~~~~~~~~~~~
      |                                           alt_ellipsoid
make[2]: *** [CMakeFiles/vehicle_gps_position_listener.dir/build.make:63: CMakeFiles/vehicle_gps_position_listener.dir/src/examples/listeners/vehicle_gps_position_listener.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/vehicle_gps_position_listener.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
